fixed contruction entertainment and electronics on mobile

--- a/src/app/contruction/style/contruction.module.css
+++ b/src/app/contruction/style/contruction.module.css
@@ -10,3 +10,11 @@
   font-weight: 900;
   font-size: 30px;
 }
+@media (max-width: 899px) {
+  .sec4 {
+    display: flex;
+    flex-direction: column;
+    gap: 0.4rem;
+    margin-top: 4rem;
+  }
+}
