--- a/src/app/electronics/styles/electronics.module.css
+++ b/src/app/electronics/styles/electronics.module.css
@@ -56,3 +56,53 @@
   gap: 30px;
   flex-wrap: wrap;
 }
+
+@media (max-width: 899px) {
+  .imgcontainer {
+    display: none;
+  }
+  .divrentalh1 {
+    font-weight: 900;
+    font-size: 20px;
+  }
+  .imgcontain {
+    display: flex;
+    flex-direction: column;
+    margin-top: 3rem;
+    margin-right: 0.5rem;
+  }
+  .dividentification {
+    margin-top: 20px;
+    font-weight: 600;
+    font-size: 2.4rem;
+    text-decoration: underline;
+  }
+  .ulidentification {
+    font-weight: 800;
+    font-size: 1rem;
+    text-decoration: none;
+  }
+
+  .divprice {
+    display: none;
+  }
+  .sectcontent {
+    margin-top: 3rem;
+  }
+  .secondsec {
+    display: flex;
+    flex-direction: column;
+    gap: 0.9rem;
+  }
+  .thirdsec {
+    display: flex;
+    flex-direction: column;
+    gap: 0.9rem;
+  }
+}
+
+@media (min-width: 900px) {
+  .imgcontain {
+    display: none;
+  }
+}
